Refactor QuickOpen: Enhance features, improve structure, and update documentation
- Updated README.md to reflect new features and installation instructions.
- Removed outdated Python.md and TODO.md files.
- Introduced main.py to serve as the entry point for the application.
- Enhanced action_handler.py with logging and asynchronous task handling.
- Created api_server.py for potential future API integration.
- Improved listener.py for better keyboard event handling.
- Replaced main.py with main_app.py for clearer application structure.
- Updated actions.json to simplify action definitions.
- Refined config.py for better configuration management.
- Removed unused scripts and files to streamline the project.
- Added GUI components in index.html and main.js for a better user experience.
- Updated package.json and requirements.txt for dependency management.
- Enhanced styling in style.css for a modern look.

--- a/quickopen-gui/index.html
+++ b/quickopen-gui/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>QuickOpen</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>Quick Open</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>QuickOpen GUI</h1>
-  <button onclick="triggerHotkey()">Test Hotkey</button>
+  <div id="app">
+    <h1>🔍 Quick Open</h1>
+    <input type="text" id="search" placeholder="search" />
+    <table id="shortcuts">
+      <thead>
+        <tr>
+          <th>Shortcut</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody id="shortcut-body"></tbody>
+    </table>
+    <div class="buttons">
+      
+    </div>
+  </div>
+
   <script src="renderer.js"></script>
 </body>
 </html>
